--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -1,5 +1,4 @@
 .experience-header {
-    margin-top: 10vh;
     padding-left: 50px;
     h1 {
         font-size: 3rem;
