--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -13,7 +13,7 @@
       color: rgb(255, 255, 255) !important;
       padding: 10px;
       padding-right: 18px;
-      letter-spacing: 2px !important;
+      // letter-spacing: 2px !important;
       font-family: "Open Sans";
       opacity: 0.7;
       transition: all 0.2s ease-in-out;
